# dinger-derby

dinger-derby/: CMakeLists.txt
dinger-derby/assets/characters/: README.md
dinger-derby/assets/sfx/: README.md
dinger-derby/docs/: physics-notes.md
dinger-derby/src/: main.cpp
dinger-derby/src/audio/: ProceduralSfx.h
dinger-derby/src/collision/: Collision2D.cpp  Collision2D.h  Collision3D.cpp  Collision3D.h
dinger-derby/src/game/: DerbyBests.h  GameSettings.h
dinger-derby/src/math/: Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
dinger-derby/src/physics/: AirResistance3D.cpp  AirResistance3D.h  Body2D.cpp  Body2D.h  Body3D.cpp  Body3D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  PhysicsWorld3D.cpp  PhysicsWorld3D.h  SoftBodyMesh3D.cpp  SoftBodyMesh3D.h
dinger-derby/src/rendering/: BaseballAnims.cpp  BaseballAnims.h  BaseballPlayer3D.cpp  BaseballPlayer3D.h  BaseballVisual3D.cpp  BaseballVisual3D.h  Camera3D.cpp  Camera3D.h  CharacterModel3D.cpp  CharacterModel3D.h  FrameBuffer.cpp  FrameBuffer.h  GlRenderer.cpp  GlRenderer.h  GltfLoader.cpp  GltfLoader.h  Mesh3D.cpp  Mesh3D.h  Rasterizer3D.cpp  Rasterizer3D.h  SkeletonAnimator.cpp  SkeletonAnimator.h  SkinnedModel3D.cpp  SkinnedModel3D.h  SoftwareRenderer3D.cpp  SoftwareRenderer3D.h  SpatialGrid3D.cpp  SpatialGrid3D.h  Stadium3D.cpp  Stadium3D.h
dinger-derby/tests/: Demo3D.h  DemoDragLauncher.h  DemoFpsCounter.h  RasterDemo3D.h  baseball_3d_demo.cpp  bat_physics_demo.cpp  bat_test.cpp  camera3d_test.cpp  character_viewer_demo.cpp  culling_stress_3d_demo.cpp  demo_launcher.cpp  depth_sort_3d_demo.cpp  filled_cube_3d_demo.cpp  framebuffer_test.cpp  math3d_test.cpp  mesh3d_test.cpp  physics3d_demo.cpp  physics3d_test.cpp  physics_engine_test.cpp  pitching_simulator_demo.cpp  pitching_solver_test.cpp  point_cloud_3d_demo.cpp  quaternion_test.cpp  random_spawn_test.cpp  raster_cube_3d_demo.cpp  raster_depth_3d_demo.cpp  raster_near_clip_test.cpp  rasterizer3d_test.cpp  rotation_3d_demo.cpp  skinned_model_test.cpp  soft_cube_3d_demo.cpp  softbody3d_test.cpp  spatial_grid3d_test.cpp  spin_test.cpp  stadium_demo.cpp  transform_stack_3d_demo.cpp  user_ball_test.cpp  wire_cube_3d_demo.cpp
